# modern-personality-runtime

./: CMakeLists.txt  README.md  core.h  dev16.c  macros.h  x86-16.c
binary/: binary.c  binary.h
cmd/: cmd.c  cmd.h
cpu/: machine.c  machine.h
cpu/8086/: 8086.c  8086.h  8086_instructions.c  8086_instructions_group.c  8086_instructions_interrupt.c  8086_instructions_modrm.c  8086_instructions_string.c  8086_util.c
devices/bios/: bios.h
dos/: dos.c  dos.h  dos_int21.c  dos_int21_stream.c  dos_int23.c  dos_trap.c
mtdos/: mtdos.h
tests/: kickstart86.asm
tests/cpu/: mov.asm
util/: logging.c  logging.h  util.c  util.h  util_console.c  util_console.h
